# my_music

./: .gitignore  CHANGELOG.md  README.md  bug_list.md  check-env.js  command.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml  release.yml
src/: App.css  App.jsx  App.module.scss
src-tauri/: .gitignore  Cargo.toml  app.db  build.rs  output.txt  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/common/: decrypt_qq_lyrics.rs  mod.rs  utils.rs  window.rs
src-tauri/src/controllers/: audio_player.rs  get_lyrics.rs  mod.rs  player.rs
src-tauri/src/database/: db.rs
src-tauri/src/db/: db.rs
src-tauri/src/modles/: db_playlists.rs  db_song.rs  mod.rs  music_lyrics.rs  music_meta.rs  music_play_list_song.rs  songs_for_lyrics.rs
src/base/: _variables.scss  theme-config.scss
src/common/: player.jsx  utils.jsx
src/components/barPlayer/: BarPlayer.css  BarPlayer.jsx  BarPlayerFun.jsx
src/components/barVolume/: BarVolume.css  BarVolume.jsx  BarVolumeFun.jsx
src/components/btnPlayer/: BtnPlayer.css  BtnPlayer.jsx  BtnPlayerFun.jsx
src/components/changeTheme/: ChangeTheme.jsx  ChangeTheme.module.scss  ChangeThemeFun.jsx
src/components/common/button/: MyButton.jsx  MyButton.module.scss
src/components/common/context/: MyProvider.jsx
src/components/common/input/: MyInput.jsx  MyInput.module.scss
src/components/common/modalCom/: ModalCom.jsx  ModalCom.module.scss
src/components/common/modalComFloat/: ModalComFloat.jsx  ModalComFloat.module.scss
src/components/common/settingButton/: SettingButton.jsx  SettingButton.module.scss
src/components/common/splitRow/: SplitRow.jsx  SplitRow.module.scss
src/components/commonSetting/: CommonSetting.jsx  CommonSetting.module.scss  CommonSettingFun.jsx
src/components/displayer/lyricsPlayer/: LyricsPlayer.css  LyricsPlayer.jsx  LyricsPlayer.module.scss  LyricsPlayerFun.jsx
src/components/displayer/music/: Music.css  Music.jsx  Music.module.scss  MusicFun.jsx
src/components/displayer/titlePlayer/: TitlePlayer.jsx  TitlePlayer.module.css  TitlePlayer.module.scss  TitlePlayerFun.jsx
src/components/displayer/video/: Video.css  Video.jsx  Video.module.scss  VideoFun.jsx
src/components/findLyrics/: FindLyrics.jsx  FindLyrics.module.scss  FindLyricsFun.jsx
src/components/helpList/: HelpList.jsx  HelpList.module.scss
src/components/lyricBar/: LyricBar.jsx  LyricBar.module.scss
src/components/lyricsPlayer/: LyricsPlayer.css  LyricsPlayer.jsx
src/components/mainWindow/: MainWindow.jsx  MainWindow.module.scss
src/components/mouseTracker/: MouseTracker.css  MouseTracker.jsx
src/components/player/barPlayer/: BarPlayer.css  BarPlayer.jsx  BarPlayer.module.scss  BarPlayerFun.jsx
src/components/player/barVolume/: BarVolume.css  BarVolume.jsx  BarVolume.module.scss  BarVolumeFun.jsx
src/components/player/btnPlayer/: BtnPlayer.css  BtnPlayer.jsx  BtnPlayer.module.scss  BtnPlayerFun.jsx
src/components/searchedList/: SearchedList.jsx
src/components/settingList/: SettingList.jsx  SettingList.module.scss  SettingListFun.jsx
src/components/showMsg/: ShowMsg.css  ShowMsg.jsx  ShowMsg.module.scss
src/components/songList/: SongList.css  SongList.jsx  SongList.module.scss  SongListFun.jsx
src/components/themeList/: ThemeList.jsx  ThemeList.module.scss
src/components/titlePlayer/: TitlePlayer.css  TitlePlayer.jsx  TitlePlayerFun.jsx
src/components/windowSetting/: WindowSetting.jsx  WindowSetting.module.scss
