[package]
name = "my-music"
version = "0.4.5"
description = "A music App"
authors = ["hellolio"]
edition = "2021"
build = "build.rs"

[profile.release]
debug = true


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8.2", features = [
    "window-unmaximize",
    "window-start-dragging",
    "window-close",
    "window-maximize",
    "window-minimize",
    "window-set-position",
    "window-set-size",
    "fs-write-file",
    "fs-read-file",
    "path-all",
    "protocol-asset",
    "dialog-open",
    "dialog-message",
    "dialog-save",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20.1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
ffmpeg-next = { version = "7.1.0", features = ["static"] }
anyhow = "1.0.98" # 简化错误传递和处理，提供Result<T>
encoding_rs = "0.8"
chardetng = "0.1"
id3 = "1.5"

reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.9.1"
base64 = "0.22.1"

hex = "0.4"
flate2 = "1.1.1"
quick-xml = "0.31"
regex = "1"
lofty = "0.17.0"
uuid = "1.16.0"
dotenvy = "0.15.7"

[features]
# # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# 开发时必须
custom-protocol = ["tauri/custom-protocol"]
