[package]
name = "my-music"
version = "0.4.5"
description = "A music App"
authors = ["hellolio"]
edition = "2021"
build = "build.rs"

[profile.release]
debug = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
rodio = {version = "0.20.1"}
rusqlite = { version = "0.38.0", features = ["bundled"] }
ffmpeg-next = { version = "8.0.0", features = ["static"] }
anyhow = "1.0.100"
encoding_rs = "0.8"
chardetng = "0.1"
id3 = "1.16.4"

reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
rand = "0.9.2"
base64 = "0.22.1"

hex = "0.4"
flate2 = "1.1.8"
quick-xml = "0.39.0"
regex = "1.12.2"
lofty = "0.22.4"
uuid = { version = "1.19.0", features = ["v4"] }
dotenvy = "0.15.7"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.6.0"

[features]
# # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
# 开发时必须
custom-protocol = ["tauri/custom-protocol"]
